# miso-lims

./: .dockerignore  .env  .env.sample  .gitignore  .gitmodules  .mkdocs.yml  .prettierrc.json  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  _config.yml  admin-manual.md  build_docs.sh  change_label_editor.md  change_samples_list.md  compact-changelog.sh  compact-migrations  docker-compose-build.yml  docker-compose.build.yml  docker-compose.demo.yml  docker-compose.detailed.yml  docker-compose.env.yml  docker-compose.override.yml  docker-compose.plain.demo.ss-ssl.yml  docker-compose.plain.demo.ssl.yml  docker-compose.plain.yml  docker-compose.prod.yml  docker-compose.yml  index.html  index.md  mkdocs.yml  pinery-miso-dockerfile  pom.xml  pom.xml.orig  promote_release.sh  readme.md  release.sh  (+3 more)
.docker/: demo.detailed.yml  demo.plain.yml  flyway-migrate.sh  run-flyway  wait-for-it.sh
.github/: pull_request_template.md
0.2.x/: index.html  kit-tracking-user.html  kit-tracking.html
_includes/: adm_navigation.html  dev_navigation.html  head.html  header.html  navigation.html
_layouts/: admins.html  developers.html
_pages/: kit-tracking-user.md  kit-tracking.md  user-manual.md
_posts/: 2016-01-11-admin-manual.md  2016-01-12-code-style.md  2016-01-12-developers-manual.md  2016-01-12-eclipse-code-formatting.md  2016-01-12-external-webapp.md  2016-01-12-getting-started.md  2016-01-12-installation.md  2016-01-12-kit-tracking-user.md  2016-01-12-kit-tracking.md  2016-01-12-maven-artifacts.md  2016-01-12-rest-api.md  2016-01-12-rest-testing.md  2016-01-12-user-manual.md  2017-01-01-about.md
_site/: Gemfile  about.html  index.html  kit-tracking-user.html
analysis-server/: pom.xml
cfsan-miso-properties/: security.properties
changes/: Change_GLT-4423.md  Change_qc_in_MISO.md  Fix_editArrayLoading.md  README.md  add_2532_illumina_experiment_types.md  add_GC-10645.md  add_GLT-3529.md  add_GLT-3650.md  add_GLT-3902.md  add_GLT-3922.md  add_GLT-3939.md  add_GLT-3940.md  add_GLT-3941.md  add_GLT-4229.md  add_GLT-4231.md  add_GLT-4335.md  add_alias_requisition_URL_  add_analysisReviewRequired.md  add_analysisReviewRequired_pinery.md  add_api.md  add_archiveDetailedQcStatus.md  add_arrayruns_to_reqs.md  (+422 more)
miso/runscanner-illumina/: .gitignore  Makefile.am  README.md  build-illumina-interop  configure.ac  main.cpp
(+5706 files in other folders)
